KUrlNavigator: Set fixed width size policy on badge container

Otherwise when toggling modes the badge container might grow
to cover the entire width of the url navigator, throwing off
the remaining size calculation when placing buttons, ultimately
causing all but the last buttons to be hidden.

BUG: 501667